# google-classroom-grading-pipeline

./: .gitignore  README.md  pyproject.toml
src/classroom_sync/: auth.py  cli.py  extract.py
src/grade_assignment/: cli.py  evaluate.py  extract.py  report.py
